--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <!-- title -->
             <div id="title">
-                <img src="LauraSarg.github.io/Images/sparkle.png" alt="Decorative sparkles">
+                <img src="Images/sparkle.png" alt="Decorative sparkles">
                 <h1> Teaching Portfolio </h1>
                 <img src="Images/sparkle.png" alt="Decorative sparkle">
             </div>
