--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
             <!-- title -->
             <div id="title">
-                <img src="Images/sparkle.png" alt="Decorative sparkles">
+                <img src="images/sparkle.png" alt="Decorative sparkles">
                 <h1> Teaching Portfolio </h1>
-                <img src="Images/sparkle.png" alt="Decorative sparkle">
+                <img src="images/sparkle.png" alt="Decorative sparkle">
             </div>
                     
             <!-- Nav -->
@@ -143,9 +143,9 @@
         
                 <h5> Contact </h5>
                 <ul>
-                    <li id="contact-phone"> <img src="Images/phone.png" alt="phone icon"> 0400000000</li>
-                    <li id="contact-Linkedin"> <img src="Images/linkedin.png" alt="linkedin icon"> Laura-sargeant</li>
-                    <li id="contact-gmail"> <img src="Images/gmail.png" alt="Gmail icon"> emailaddress@gmail.com</li>
+                    <li id="contact-phone"> <img src="images/phone.png" alt="phone icon"> 0400000000</li>
+                    <li id="contact-Linkedin"> <img src="images/linkedin.png" alt="linkedin icon"> Laura-sargeant</li>
+                    <li id="contact-gmail"> <img src="images/gmail.png" alt="Gmail icon"> emailaddress@gmail.com</li>
                 </ul>  
 
             </section>
