--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <span class="letter">!</span>
                     </h2>
 
-                    <img src="images/profile.png" alt="Profile picture">
+                    <img src="images/Profile.png" alt="Profile picture">
                 </div>
 
                 <div class="subcontent" id="content-1b">
