--- a/About-me.html
+++ b/About-me.html
@@ -125,9 +125,18 @@
         
                 <h5> Contact </h5>
                 <ul>
-                    <li id="contact-phone"> <img src="images/phone.png" alt="phone icon"> 0400000000</li>
-                    <li id="contact-Linkedin"> <img src="images/linkedin.png" alt="linkedin icon"> Laura-sargeant</li>
-                    <li id="contact-gmail"> <img src="images/gmail.png" alt="Gmail icon"> emailaddress@gmail.com</li>
+                    <li id="contact-phone"> 
+                        <img src="images/phone.png" alt="phone icon">
+                        <a href="tel:0400000000">0400000000</a>
+                    </li>
+                    <li id="contact-Linkedin"> 
+                        <img src="images/linkedin.png" alt="linkedin icon">
+                        <a href="https://www.linkedin.com" target="_blank">Laura-sargeant</a>
+                    </li>
+                    <li id="contact-gmail"> 
+                        <img src="images/gmail.png" alt="Gmail icon"> 
+                        <a href="mailto:emailaddress@gmail.com">emailaddress@gmail.com</a>
+                    </li>
                 </ul>  
 
             </section>
